--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   merge_build_host: true  # [win]
-  number: 0
+  number: 1
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -35,6 +35,7 @@ requirements:
     - r-httr
     - r-jsonlite
     - r-lifecycle
+    - r-magrittr >= 2.0.3
     - r-pins >=1.0.0
     - r-plumber >=1.0.0
     - r-purrr
@@ -56,6 +57,7 @@ requirements:
     - r-httr
     - r-jsonlite
     - r-lifecycle
+    - r-magrittr >= 2.0.3
     - r-pins >=1.0.0
     - r-plumber >=1.0.0
     - r-purrr
