--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -76,10 +76,10 @@ test:
     - tests/testthat/
     - tests/testthat/testthat.R
   commands:
-    - $R -e "library('vetiver')"                          # [not win]
-    - $R -e "testthat::test_package('vetiver')"           # [not win]
-    - "\"%R%\" -e \"library('vetiver')\""                 # [win]
-    - "\"%R%\" -e \"testthat::test_package('vetiver')\""  # [win]
+    - $R -e "library('vetiver')"                                         # [not win]
+    - $R -e "testthat::test_file('tests/testthat/testthat.R')"           # [not win]
+    - "\"%R%\" -e \"library('vetiver')\""                                # [win]
+    - "\"%R%\" -e \"testthat::test_file('tests/testthat/testthat.R')\""  # [win]
 
 about:
   home: https://vetiver.tidymodels.org/, https://github.com/tidymodels/vetiver
