--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -74,12 +74,12 @@ test:
     - r-testthat >=3.0.0
   source_files:
     - tests/testthat/
-    - tests/testthat/testthat.R
+    - tests/testthat.R
   commands:
     - $R -e "library('vetiver')"                                         # [not win]
-    - $R -e "testthat::test_file('tests/testthat/testthat.R')"           # [not win]
+    - $R -e "testthat::test_file('tests/testthat.R')"           # [not win]
     - "\"%R%\" -e \"library('vetiver')\""                                # [win]
-    - "\"%R%\" -e \"testthat::test_file('tests/testthat/testthat.R')\""  # [win]
+    - "\"%R%\" -e \"testthat::test_file('tests/testthat.R')\""  # [win]
 
 about:
   home: https://vetiver.tidymodels.org/, https://github.com/tidymodels/vetiver
