--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
   host:
     - r-base
     - r-bundle
-    - r-butcher
+    - r-butcher >=0.3.1
     - r-cli
     - r-fs
     - r-generics
@@ -35,12 +35,10 @@ requirements:
     - r-hardhat
     - r-lifecycle
     - r-magrittr >=2.0.3
-    - r-pins >=1.0.0
-    - r-plumber >=1.0.0
+    - r-pins >=1.1.0
     - r-purrr
     - r-rapidoc
     - r-readr >=1.4.0
-    - r-renv
     - r-rlang >=1.0.0
     - r-tibble
     - r-vctrs
@@ -48,7 +46,7 @@ requirements:
   run:
     - r-base
     - r-bundle
-    - r-butcher
+    - r-butcher >=0.3.1
     - r-cli
     - r-fs
     - r-generics
@@ -56,12 +54,10 @@ requirements:
     - r-hardhat
     - r-lifecycle
     - r-magrittr >=2.0.3
-    - r-pins >=1.0.0
-    - r-plumber >=1.0.0
+    - r-pins >=1.1.0
     - r-purrr
     - r-rapidoc
     - r-readr >=1.4.0
-    - r-renv
     - r-rlang >=1.0.0
     - r-tibble
     - r-vctrs
@@ -102,6 +98,7 @@ about:
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/MIT
     - LICENSE
+
 extra:
   recipe-maintainers:
     - conda-forge/r
