--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -72,6 +72,7 @@ test:
     - r-mlr3
     - r-mlr3learners
     - r-modeldata
+    - r-plumber >=1.0.0
     - r-ranger
     - r-rmarkdown >=2.12
     - r-rsconnect
