--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -71,6 +71,7 @@ test:
   requires:
     - r-testthat >=3.1.8
     - r-caret
+    - r-clustmixtype
     - r-dplyr
     - r-flexdashboard
     - r-mlr3
