--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ requirements:
     - r-hardhat
     - r-lifecycle
     - r-magrittr >=2.0.3
-    - r-pins >=1.2.0
+    - r-pins >=1.3.0
     - r-purrr
     - r-rapidoc
     - r-readr >=1.4.0
@@ -58,7 +58,7 @@ requirements:
     - r-hardhat
     - r-lifecycle
     - r-magrittr >=2.0.3
-    - r-pins >=1.2.0
+    - r-pins >=1.3.0
     - r-purrr
     - r-rapidoc
     - r-readr >=1.4.0
@@ -88,8 +88,7 @@ test:
     - r-xgboost
     - r-yardstick
   source_files:
-    - tests/testthat/
-    - tests/testthat.R
+    - tests/
   commands:
     - $R -e "library('vetiver')"                                                      # [not win]
     - $R -e "testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)"           # [not win]
