--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,8 @@ source:
     - {{ cran_mirror }}/src/contrib/vetiver_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/vetiver/vetiver_{{ version }}.tar.gz
   sha256: 0b6852a357c796e03361cd1248100f0ec9f0e6cd0d75e2deec20ff4d20c9f711
+  patches:
+    - patches/0001-check-xgboost.patch
 
 build:
   merge_build_host: true  # [win]
