--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
     - patches/0001-check-xgboost.patch
 
 build:
-  number: 2
+  number: 3
   noarch: generic
   rpaths:
     - lib/R/lib/
@@ -85,7 +85,7 @@ test:
     - r-slider >=0.2.2
     - r-vdiffr
     - r-workflows
-    # - r-xgboost
+    - r-xgboost
     - r-yardstick
   source_files:
     - tests/
